<resources>
    <string name="app_name">Persediaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="konversi">Konversi</string>
    <string name="transfer">Transfer</string>
    <string name="pener">RECEIVE</string>
    <string name="home">Home</string>
    <string name="scan">SCAN</string>
    <string name="setting">SETTING</string>
    <string name="out_item">SPENDING</string>
    <string name="title_activity_scan">ScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>