<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_transparant_manual_book"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ManualBookFragment">
<LinearLayout
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfilUser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@drawable/avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Nama Lengkap"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Username"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSatker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="right"
                    android:text="Perikanan"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvAlamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="Surabaya"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/tapCardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintLeft_toLeftOf="@id/cardView"
        app:layout_constraintRight_toRightOf="@id/cardView"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/tap_jari" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewManualBook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/splashBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView8ManualBook"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@color/splashBackground"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.etebarian.meowbottomnavigation.MeowBottomNavigation
                android:id="@+id/bottomNavManualBook"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:mbn_backgroundBottomColor="@color/splashBackground"
                app:mbn_circleColor="@color/white"
                app:mbn_countBackgroundColor="#FF6F00"
                app:mbn_countTextColor="@color/white"
                app:mbn_defaultIconColor="@color/white"
                app:mbn_selectedIconColor="@color/splashBackground">

            </com.etebarian.meowbottomnavigation.MeowBottomNavigation>

            <LinearLayout
                android:id="@+id/linearLayoutManualBook"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="-5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/bottomNavManualBook"
                app:layout_constraintEnd_toEndOf="@id/bottomNavManualBook"
                app:layout_constraintStart_toStartOf="@id/bottomNavManualBook"
                app:layout_constraintTop_toTopOf="@id/bottomNavManualBook">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblBotNavTittleHomeManualBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/splashBackgroundTranparant"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblBotNavtittlePenerManualBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/splashBackgroundTranparant"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/pener"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblBotNavTittleScanManualBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/splashBackgroundTranparant"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/scan"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblBotNavTittleItemOutManualBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/splashBackgroundTranparant"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/out_item"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblBotNavTittleSettingManualBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/splashBackgroundTranparant"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/setting"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btnNavManualbook"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblManualBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="Tap disini untuk membuka halaman home"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/cardViewManualBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/btnLewati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/buttonTransBackground"
        android:text="Lewati"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/buttonTransBackground"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

</androidx.constraintlayout.widget.ConstraintLayout>